# formal-languages-theory

automaton/: CMakeLists.txt
automaton/automatons/: 1.dfa  1.enfa  invalid.dfa
automaton/src/: automaton.cpp  automaton.h  dfa.cpp  dfa.h  epsnfa.cpp  epsnfa.h  functional.cpp  functional.h  log.cpp  log.h  main.cpp  movestable.cpp  movestable.h  nfa.cpp  nfa.h  out.cpp  out.h  state.cpp  state.h
interpreter/: CMakeLists.txt  example
interpreter/src/: interpreter.cpp  interpreter.h  main.cpp
lexical_analyzer/: CMakeLists.txt
lexical_analyzer/src/: analyzer.cpp  analyzer.h  lexeme.h  main.cpp  state.h
semantic_analyzer/: CMakeLists.txt
semantic_analyzer/src/: entry.h  entrycollection.cpp  entrycollection.h  main.cpp  parser.cpp  parser.h
syntactic_parser/: CMakeLists.txt  example
syntactic_parser/src/: main.cpp  parser.cpp  parser.h
